--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <title>Title</title>
+    <title>DASHBOARD</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -83,64 +83,112 @@
 
       </section>
 
+      <!-- home page main code. -->
+
       <main class="mainArticle">
+        <!-- container part one... this is the first part of the home page -->
+
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-3">
               <div class="card">
                 <div class="card-body">
-                  <!-- <span><i class="far fa-lightbulb"></i>light</span> -->
-                  Lorem
+                  <span><i class="far fa-lightbulb"></i>entrance</span>
+                  <h6 class="onSwitch">ON</h6>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
               <div class="card">
                 <div class="card-body">
-                  This is some text within a card body.
+                  <span><i class="far fa-lightbulb"></i>light</span>
+                  <h6 class="onSwitch">ON</h6>
                 </div>
               </div>
             </div>
+            <div class="col-md-3">
+              <div class="card">
+                <div class="card-body">
+                  <span><i class="far fa-lightbulb"></i>light</span>
+                  <h6 class="onSwitch">ON</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <div class="card-body">
+                  <h6 class="onSwitch">ON</h6>
+                  <span><i class="far fa-lightbulb"></i>light</span>
+                </div>
+              </div>
+            </div>
+            
           </div>
+        </div>
+
+        <!-- container part two... this is the second part of the home page -->
+        <div class="container-fliud">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
               <div class="card">
                 <div class="card-body">
-                  This is some text within a card body.
+                  <h5 class="card-title">room management</h5>
+                  <p class="card-text">Content</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5">
               <div class="card">
                 <div class="card-body">
-                  This is some text within a card body.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  This is some text within a card body.
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  This is some text within a card body.
+                  <h5 class="card-title">my playlist</h5>
+                  <p class="card-text">Content</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
+        <!-- container part three... this is the third part of the home page -->
+
+        <div class="container-fliud">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">room temperature</h5>
+                  <p class="card-text">Content</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Title</h5>
+                  <p class="card-text">Content</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        
       </main>
 
       <!-- the footer -->
-      <!-- <footer>
-       <h2> made with love @copyright 2020</h2>
-      </footer> -->
+        <footer>
+          <div class="container-fliud">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+                  <div class="card-body">
+                    <p ><i class="fa fa-copyright" aria-hidden="true"></i>2019 </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
