--- a/chart.html
+++ b/chart.html
@@ -3,12 +3,10 @@
 
     <head>
         <title>A Node RED Example</title>
-        <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css'> <script
-            src='//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js'> </script> <script
-            src='//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'> </script> <script
-            src='//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js'> </script> </head> <body>
+        <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css'> 
+        <script src='//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js'> </script>  <script src='//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js'> </script> </head> <body>
         <div id='chart-example' style='height:250px;'></div>
-        <script>
+        <script type="text/JavaScript">
             Morris.Donut({
                 element: 'chart-example',
                 data: [{
